--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="back-title">Hi, I'm Anna.</div>
     </div>
     <canvas id="canvas">
-      Canvasへ対応したブラウザーをお使いください。
+      Please view this page in a browser that supports canvas.
     </canvas>
     <script src="/common/js/particles_gradient.js"></script>
     <section class="wrapper top">
