SP menu improved

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         <img src="/common/images/x-btn.svg" alt="Close">
       </div>
       <ul class="nav-menu">
-        <li><a href="/index.html#works">Works</a></li>
+        <li><a href="/index.html#works">Works</a>
+        <ul class="sub-menu">
+          <li><a href="/work01/index.html">Fashion App UI</a></li>
+          <li><a href="/work02/index.html">Portfolio WebSite</a></li>
+          <li><a href="/work03/index.html">Freelance Website</a></li>
+          <li><a href="/work04/index.html">Sweets App UI</a></li>
+        </ul>
+        </li>
         <li><a href="/index.html#about">About</a></li>
         <li><a href="/index.html#experience">Experience</a></li>
         <li><a href="/index.html#contact">Contacts</a></li>
