Freelance page finalization

--- a/work03/index.html
+++ b/work03/index.html
@@ -64,28 +64,33 @@
             <p>Anyway, I still think it was a nice starting point at my path as a web designer.</p>
           </div>
           <div class="img-box">
-            <img src="/work03/images/iphone.png" alt="Smartphone Responsive Design">
-            <img src="/work03/images/macbook.png" alt="Desktop Responsive Design">
+            <img src="/work03/images/hero.png" alt="Desktop & Smartphone Responsive Design">
           </div>
         </div>
       </div>
     </section>
     <section id="points">
-      <div class="flex">
-        <h2>Points</h2>
-        <ul class="mark">
-          <li>Coding for this project was made in Sass.</li>
-          <li>Php form made by me from a scratch (with help of another Youtube tutorial).</li>
-          <li>Colors are easily changeble due to Sass variables.</li>
-          <li>Background on top and footer are interactive (react on mouse over).</li>
-          <li>Design is made in Photoshop (I don’t know why, maybe because Japan is so traditional and cautious-to-new-things, but even nowadays is't not uncommon to see website designs made mainly in Photoshop or Illustrator).</li>
-          <li>Responsive design adapted for desktop, tablet and mobile media.</li>
-        </ul>
-        <div class="img-box">
-          <img src="/work03/images/wfs01.png" alt="Website Top Screen Wireframe">
-          <img src="/work03/images/wfs02.png" alt="Website Services Screen Wireframe">
-          <img src="/work03/images/wfs03.png" alt="Website Works Screen Wireframe">
-          <p class="img-title">Wireframes</p>
+      <div class="wrapper">
+        <div class="flex">
+          <div class="pos-left">
+            <h2>Points</h2>
+            <ul class="mark">
+              <li>Coding for this project was made in Sass.</li>
+              <li>Php form made by me from a scratch (with help of another Youtube tutorial).</li>
+              <li>Colors are easily changeble due to Sass variables.</li>
+              <li>Background on top and footer are interactive (react on mouse over).</li>
+              <li>Design is made in Photoshop (I don’t know why, maybe because Japan is so traditional and cautious-to-new-things, but even nowadays is't not uncommon to see website designs made mainly in Photoshop or Illustrator).</li>
+              <li>Responsive design adapted for desktop, tablet and mobile media.</li>
+            </ul>
+          </div>
+          <div class="pos-right flex">
+            <div class="img-box">
+              <img src="/work03/images/wfs01.png" alt="Website Top Screen Wireframe">
+              <img src="/work03/images/wfs02.png" alt="Website Services Screen Wireframe">
+              <img src="/work03/images/wfs03.png" alt="Website Works Screen Wireframe">
+            </div>
+            <p class="img-title">Wireframes</p>
+          </div>
         </div>
       </div>
     </section>
